// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Numeric selector component CustomNumericSelector minus button is disabled if value is less than or equal to minValue 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
      },
      Object {
        "borderColor": "#e0e0e0",
      },
    ]
  }
>
  <IconButton
    backgroundColor="#0071e9"
    disabled={true}
    height={15}
    icon={
      <mockConstructor
        color="#BABBBE"
        name="minus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="decreaseButton"
    type={3}
    width={35}
  />
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#0071e9",
          "minWidth": "15%",
          "paddingHorizontal": 4,
          "textAlign": "center",
        }
      }
    >
      10
    </Text>
  </TouchableOpacity>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="plus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="increaseButton"
    type={3}
    width={35}
  />
</View>
`;

exports[`Custom Numeric selector component CustomNumericSelector plus button is disabled if value is greater than or equal to maxValue 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
      },
      Object {
        "borderColor": "#e0e0e0",
      },
    ]
  }
>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="minus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="decreaseButton"
    type={3}
    width={35}
  />
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#0071e9",
          "minWidth": "15%",
          "paddingHorizontal": 4,
          "textAlign": "center",
        }
      }
    >
      10
    </Text>
  </TouchableOpacity>
  <IconButton
    backgroundColor="#0071e9"
    disabled={true}
    height={15}
    icon={
      <mockConstructor
        color="#BABBBE"
        name="plus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="increaseButton"
    type={3}
    width={35}
  />
</View>
`;

exports[`Custom Numeric selector component CustomNumericSelector with invalid input 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
      },
      Object {
        "borderColor": "#b71c1c",
      },
    ]
  }
>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="minus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="decreaseButton"
    type={3}
    width={35}
  />
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#0071e9",
          "minWidth": "15%",
          "paddingHorizontal": 4,
          "textAlign": "center",
        }
      }
    >
      10
    </Text>
  </TouchableOpacity>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="plus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="increaseButton"
    type={3}
    width={35}
  />
</View>
`;

exports[`Custom Numeric selector component CustomNumericSelector with valid input 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 1,
        "flexDirection": "row",
      },
      Object {
        "borderColor": "#e0e0e0",
      },
    ]
  }
>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="minus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="decreaseButton"
    type={3}
    width={35}
  />
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#0071e9",
          "minWidth": "15%",
          "paddingHorizontal": 4,
          "textAlign": "center",
        }
      }
    >
      10
    </Text>
  </TouchableOpacity>
  <IconButton
    backgroundColor="#0071e9"
    disabled={false}
    height={15}
    icon={
      <mockConstructor
        color="#0071e9"
        name="plus"
        size={18}
      />
    }
    onPress={[MockFunction]}
    radius={5}
    testID="increaseButton"
    type={3}
    width={35}
  />
</View>
`;
